vcluster_versioned_docs/version-0.31.0/deploy/control-plane/binary/README.mdx
---
title: vCluster Standalone
sidebar_label: As a binary - Standalone
sidebar_position: 2
sidebar_class_name: standalone private-nodes
---

import Standalone from '../../../_fragments/standalone.mdx'
import PrivateNodeLimitations from '../../../_fragments/private-nodes-limitations.mdx'

import TenancySupport from '../../../_fragments/tenancy-support.mdx';

<TenancySupport standalone="true" />

<Standalone />

## Compute resource requirements

vCluster Standalone can be deployed on bare metal, virtual machines, or containers. The minimal recommended resource requirements for vCluster Standalone are as follows:

- 0.2 vCPU
- 512 MiB of RAM
- 1 GiB of ephemeral storage

:::info
These are minimal requirements suitable for testing and development. Production deployments should be sized based on your specific workload, cluster size, and the number of virtual clusters you plan to run.
:::

## Installation overview

vCluster Standalone needs its own set of nodes for the control plane, and you can add extra nodes later if you want them to act as workers.

The steps to bring up a vCluster Standalone cluster are:

1. Install an initial control plane node.
2. (Optional) Join additional control plane nodes.
3. (Optional) Join worker nodes.

## vcluster.yaml configuration

To create a vCluster Standalone with one node that is the control plane and worker node. Read more about [high availability](./high-availability).

```yaml title="Enable standalone"
controlPlane:
  distro:
    k8s:
      image:
        tag: v1.31.2 # Kubernetes version you want to use

# Networking configuration
networking:
  # Specify the pod CIDR
  podCIDR: 10.64.0.0/16
  # Specify the service CIDR
  serviceCIDR: 10.128.0.0/16
```

:::tip Additional configuration options
This minimal configuration is all you need to get started. Once you're ready to customize your deployment:

- **Dedicated control plane** - Set `controlPlane.standalone.joinNode.enabled: false` to prevent the control plane node from running workloads
- **Private registries** - Configure `controlPlane.standalone.joinNode.containerd` for registry mirrors, authentication, and TLS settings
- **Node customization** - Use `controlPlane.standalone.joinNode.nodeRegistration` for kubelet arguments, taints, and CRI socket configuration

See the [standalone configuration reference](../../../configure/vcluster-yaml/control-plane/components/standalone) for all available options.
:::



<PrivateNodeLimitations />